--- a/index.css
+++ b/index.css
@@ -25,6 +25,10 @@
     margin: 0;
     background-color: var(--neutral-5);
   }
+
+  .hidden {
+    display: hidden;
+  }
   
   h1 {
     margin: 50px 0 30px 0;
@@ -157,6 +161,42 @@
     border-bottom: var(--neutral-4) solid 1px;
     margin-bottom: 20px;
   }
+
+  .show {
+    visibility:visible !important;
+  }
+
+  #user-info {
+    visibility: hidden;
+    padding: 25px 20px;
+    background-color: var(--primary-7);
+    box-shadow: 1px 6px 6px rgba(1, 2, 0, 0.9);
+    margin: 15px 0;
+    border-radius: 20px;
+    transition: opacity 10ms ease-out;
+    opacity: 0.75;
+    display: flex;
+    flex-direction: row;
+}
+#repos-list li:hover {
+    opacity: 1;
+}
+
+.flex-parent{
+    display: flex;
+    flex-direction: column;
+}
+
+ #user-info h1 {
+    color:black;
+    padding-left: 20px;
+ }
+
+  #user-info img {
+    border: white solid 1px;
+    border-radius: 50%;
+    max-width: 20%;
+}
   
   .required {
     color: var(--primary-2);
@@ -287,14 +327,16 @@
   #repos-list li {
       padding: 25px 20px;
       background-color: white;
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+      box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.1);
       margin: 15px 0;
-      border-radius: 3px;
+      border-radius: 6px;
       transition: opacity 150ms ease-out;
       opacity: 0.85;
   }
   #repos-list li:hover {
       opacity: 1;
+      box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.1);
+
   }
   #repos-list h2 {
       margin-top: 0;
